--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URL=mongodb://127.0.0.1:27017/DEMO2
+MONGO_URL=mongodb+srv://language_translate:ssn742FQ9AAaskKw@cluster0.lxmmcdf.mongodb.net/LT?retryWrites=true&w=majority
+
