--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-MONGO_URL=mongodb+srv://language_translate:ssn742FQ9AAaskKw@cluster0.lxmmcdf.mongodb.net/LT?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://language_translate:ssn742FQ9AAaskKw@cluster0.lxmmcdf.mongodb.net/DEMO2?retryWrites=true&w=majority
 
+language_translate
+ssn742FQ9AAaskKw
