--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "build":"netlify deploy --prod",
-    "dev": "nodemon app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
